# Homework

./: 2matricBazm.cpp  BitwizeAndOtherOperators.cpp  CMakeLists.txt  LISTimplement.cpp  Makefile  VectGumTarb.cpp  Vector.cpp  a.out  chess.h  fibOptimizedRecurs.cpp  fibRec.cpp  h1.cpp  h2.cpp  h3.cpp  h4.cpp  intChar.cpp  kentzuyg.cpp  ma.ii  ma.s  main.cpp  map.cpp  mi.ii  mi.s  min.cpp  mylist.cpp  n-rdmax.cpp  rclient.cpp  rserver.cpp  sq.ii  square.cpp  su.ii  sum.cpp  uglyNumbers.cpp
